# pokrov

./: .dockerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  rustfmt.toml  skills-lock.json
.specify/integrations/: codex.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
config/: README.md  pokrov.example.yaml  pokrov.test.yaml
config/release/: verification-checklist.md
crates/pokrov-api/: Cargo.toml
crates/pokrov-api/src/: app.rs  auth.rs  error.rs  lib.rs
crates/pokrov-api/src/handlers/: chat_completions.rs  evaluate.rs  health.rs  mcp_tool_call.rs  metrics.rs  mod.rs  models.rs  rate_limit.rs  ready.rs  request_context.rs  responses.rs
crates/pokrov-api/src/middleware/: mod.rs  rate_limit.rs  request_id.rs
crates/pokrov-config/: Cargo.toml
crates/pokrov-config/src/: error.rs  lib.rs  loader.rs  model.rs  model_key.rs  rate_limit.rs  validate.rs  validate_tests.rs
crates/pokrov-config/src/model/: auth.rs  llm.rs  mcp.rs  mod.rs  ner.rs  runtime.rs  sanitization.rs
crates/pokrov-core/: Cargo.toml
crates/pokrov-core/src/: lib.rs  ner_adapter.rs  types.rs  util.rs
crates/pokrov-core/src/audit/: mod.rs
crates/pokrov-core/src/detection/: mod.rs  runtime_builtins.rs  runtime_rules.rs  runtime_rules_tests.rs
crates/pokrov-core/src/detection/deterministic/: context.rs  lists.rs  mod.rs  pattern.rs  validation.rs
crates/pokrov-core/src/dry_run/: mod.rs
crates/pokrov-core/src/lib/: tests.rs
crates/pokrov-core/src/policy/: mod.rs
crates/pokrov-core/src/transform/: mod.rs
crates/pokrov-core/src/traversal/: mod.rs
crates/pokrov-core/src/types/: foundation.rs
crates/pokrov-core/src/types/foundation/: boundaries.rs  entity_packs.rs  evaluation_lab.rs  hit_families.rs  mod.rs  transform.rs
crates/pokrov-core/src/types/foundation/evaluation_lab/: inventory.rs
crates/pokrov-metrics/: Cargo.toml
crates/pokrov-ner/: Cargo.toml
crates/pokrov-ner/src/: decode.rs  engine.rs  error.rs  label.rs  lang.rs  lib.rs  model.rs
crates/pokrov-ner/tests/: integration.rs  ner_dataset_eval.rs  ort_smoke.rs
crates/pokrov-proxy-llm/: Cargo.toml
crates/pokrov-proxy-llm/src/: audit.rs  errors.rs  handler.rs  lib.rs  normalize.rs  routing.rs  stream.rs  trace.rs  types.rs  upstream.rs
crates/pokrov-proxy-llm/src/handler/: mod.rs  streaming.rs  support.rs
crates/pokrov-proxy-mcp/: Cargo.toml
crates/pokrov-proxy-mcp/src/: audit.rs  errors.rs  handler.rs  lib.rs  policy.rs  types.rs  upstream.rs  validate.rs
crates/pokrov-runtime/: Cargo.toml
crates/pokrov-runtime/src/: bootstrap.rs  lib.rs  lifecycle.rs  main.rs  observability.rs  release_evidence.rs
docs/: PRD.md  configuration.md  proxy-ux-analysis.md
docs/verification/: 001-bootstrap-runtime.md  003-llm-proxy.md  004-mcp-mediation.md  005-hardening-release.md  006-en-ru-entity-packs.md  007-evaluation-lab-foundation.md  008-baseline-and-dataset-inventory.md  008-proxy-ux-solution.md  009-architecture-foundation.md  010-analyzer-core-contract.md  013-safe-explainability-and-audit.md  014-dataset-detector-gap-report.md  015-v1-developer-detector-backlog.md
scripts/: download-ner-model.sh
scripts/eval/: download_open_datasets.sh  render_dataset_detector_gap_report.sh
specs/001-bootstrap-runtime/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-sanitization-core/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-llm-proxy/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-mcp-mediation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-hardening-release/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-byok-passthrough-auth/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-codex-agent-compat/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-proxy-ux-solution/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-architecture-foundation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/010-analyzer-core-contract/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/011-deterministic-recognizers/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/012-operator-semantics/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/013-safe-explainability-audit/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/014-structured-json-processing/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: lib.rs
tests/: contract.rs  integration.rs  performance.rs  security.rs
tests/common/: hardening_test_support.rs  llm_proxy_test_support.rs  mcp_test_support.rs  sanitization_analyzer_contract_test_support.rs  sanitization_dataset_report_test_support.rs  sanitization_dataset_test_support.rs  sanitization_deterministic_test_support.rs  sanitization_foundation_test_support.rs
tests/contract/: llm_proxy_api_contract.rs  llm_proxy_metadata_contract.rs  llm_proxy_stream_contract.rs  mcp_mediation_api_contract.rs  release_evidence_contract.rs  responses_api_contract.rs  runtime_api_contract.rs  runtime_config_contract.rs  sanitization_entity_pack_contract.rs  sanitization_evaluate_contract.rs  sanitization_evaluation_lab_contract.rs  sanitization_foundation_contract.rs  sanitization_open_dataset_pipeline_contract.rs
tests/integration/: blocked_metrics_profile_label_path.rs  bootstrap_acceptance_contract.rs  byok_end_to_end_flow.rs  byok_identity_policy_binding_path.rs  byok_identity_rate_limit_isolation_path.rs  hardening_degraded_shutdown_flow.rs  hardening_dry_run_observability_path.rs  hardening_end_to_end_release_flow.rs  hardening_metrics_degradation_path.rs  hardening_metrics_flow.rs  hardening_release_evidence_fail_path.rs  (+42 more)
(+104 files in other folders)
