[package]
name = "pokrov-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
http = { workspace = true }
pokrov-config = { path = "../pokrov-config" }
pokrov-core = { path = "../pokrov-core" }
pokrov-metrics = { path = "../pokrov-metrics" }
pokrov-proxy-llm = { path = "../pokrov-proxy-llm" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
