[package]
name = "pokrov-api"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
axum = { workspace = true }
http = { workspace = true }
pokrov-config = { path = "../pokrov-config" }
pokrov-core = { path = "../pokrov-core" }
pokrov-metrics = { path = "../pokrov-metrics" }
pokrov-proxy-llm = { path = "../pokrov-proxy-llm" }
pokrov-proxy-mcp = { path = "../pokrov-proxy-mcp" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
