[package]
name = "pokrov-config"
version = "0.1.0"
edition = "2021"

[features]
default = []
ner = ["pokrov-ner"]

[dependencies]
pokrov-core = { path = "../pokrov-core" }
pokrov-ner = { path = "../pokrov-ner", optional = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
