[package]
name = "pokrov-core"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[features]
default = []
ner = ["pokrov-ner"]

[dependencies]
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
pokrov-ner = { path = "../pokrov-ner", optional = true }
