[package]
name = "pokrov-proxy-llm"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
bytes = { workspace = true }
futures-util = { workspace = true }
http = { workspace = true }
pokrov-config = { path = "../pokrov-config" }
pokrov-core = { path = "../pokrov-core" }
pokrov-metrics = { path = "../pokrov-metrics" }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
