[package]
name = "pokrov-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
pokrov-api = { path = "../pokrov-api" }
pokrov-config = { path = "../pokrov-config" }
pokrov-core = { path = "../pokrov-core" }
pokrov-metrics = { path = "../pokrov-metrics" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
